# protoc-gen-spicy

./: .markdownlint.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
examples/: CMakeLists.txt
examples/proof-of-concept/: CMakeLists.txt  SimpleMessage.proto  constants.hpp  receiver.cpp  sender.cpp  utils.hpp
tools/: build.sh  clang-format.sh
